<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <TextView
            style="@style/header_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header" />

        <!--q1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/whole_question_padding">

            <TextView
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/answer_group_padding"
                android:paddingStart="@dimen/answer_group_padding">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1a" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1b" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1c" />

                <RadioButton
                    android:id="@+id/right_ans_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q1d" />

            </RadioGroup>

        </LinearLayout>

        <!--q2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/whole_question_padding">

            <TextView
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/answer_group_padding"
                android:paddingStart="@dimen/answer_group_padding">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2a" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2b" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2c" />

                <RadioButton
                    android:id="@+id/right_ans_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q2d" />

            </RadioGroup>

        </LinearLayout>

        <!--q3-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/whole_question_padding">

            <TextView
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/answer_group_padding"
                android:paddingStart="@dimen/answer_group_padding">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3a" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3b" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3c" />

                <RadioButton
                    android:id="@+id/right_ans_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q3d" />

            </RadioGroup>

        </LinearLayout>

        <!--q4-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/whole_question_padding">

            <TextView
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingEnd="@dimen/answer_group_padding"
                android:paddingStart="@dimen/answer_group_padding">

                <RadioButton
                    android:id="@+id/right_ans_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4a" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4b" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4c" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q4d" />

            </RadioGroup>

        </LinearLayout>

        <!--q5-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/whole_question_padding">

            <TextView
                style="@style/question_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingEnd="@dimen/answer_group_padding"
                android:paddingStart="@dimen/answer_group_padding">

                <CheckBox
                    android:id="@+id/right_ans_5a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5a" />

                <CheckBox
                    android:id="@+id/right_ans_5b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5b" />

                <CheckBox
                    android:id="@+id/wrong_ans_5a"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5c" />

                <CheckBox
                    android:id="@+id/wrong_ans_5b"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/q5d" />
            </LinearLayout>


        </LinearLayout>

        <!--q6-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/whole_question_padding"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/question_style"
                android:text="@string/q6"/>

            <EditText
                android:id="@+id/ans_field_q6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/q6hint"
                android:paddingEnd="@dimen/answer_group_padding"
                android:paddingStart="@dimen/answer_group_padding"
                android:inputType="textCapWords"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/honor_code"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/name_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:hint="@string/name_field" />

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_field"
                android:layout_centerHorizontal="true"
                android:text="@string/txt_button" />

            <TextView
                android:id="@+id/score_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/btn_submit"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>